2008-04-13 Og Maciel <ogmaciel@gnome.org>

	* utils.py: create_pixbuf now does color parsing and uses a cairo-based
	image to create pixbuf.

2008-03-27 Og Maciel <ogmaciel@gnome.org>

    * common.py: Bumped version to 0.3.1

2008-03-23 Og Maciel <ogmaciel@gnome.org>

    * utils.py: Added optional 'index' parameter to global function that 
	selects items in a gtk.ComboBox widget.

2008-03-09 Og Maciel <ogmaciel@gnome.org>

    * dialogs.py: Added missing parameters to AddDialog call

2008-03-06 Og Maciel <ogmaciel@gnome.org>

    * scheduler.py: Fixed a bug that would cause recurring bills not to expand 
	beyond the current year, change make by Luiz Armesto <luiz.armesto@gmail.com>
	(ref: sourceforge #1908445)