@@ -38,7 +38,7 @@ See the 'INSTALL' file.
 HOW TO HELP
 ===========
 You can report new bugs at
- http://sourceforge.net/projects/billreminder/
+ http://code.google.com/p/billreminder/
 
 I'm currently looking for people with the following skills:
 
@@ -52,5 +52,5 @@ Feel free to send patches.
 
 CONTACTS
 ========
-BillReminder Mailing List <billreminder-devel@lists.sourceforge.net>
+BillReminder Mailing List <http://groups.google.com/group/billreminder>
 
