@@ -4,7 +4,7 @@
 #     BillReminder Daemon @VERSION@       #
 #                                     #
 # Copyright (C) 2006-2008 Og Maciel   #
-# http://billreminder.sourceforge.net #
+# http://code.google.com/p/billreminder/ #
 #                                     #
 #######################################
 
