@@ -1,13 +1,13 @@
 This package was debianized by Luiz Armesto <luiz.armesto@gmail.com> on
 Sat, 01 Dec 2007 15:03:57 -0200.
 
-It was downloaded from http://billreminder.sourceforge.net
+It was downloaded from http://code.google.com/p/billreminder/
 
-Upstream Author(s): 
+Upstream Author(s):
 
     Og Maciel <og.maciel@gmail.com>
 
-Copyright: 
+Copyright:
 
     Copyright (C) 2006-2007 Og Maciel
 
@@ -19,10 +19,10 @@ License:
     the rights to use, copy, modify, merge, publish, distribute, sublicense, 
     and/or sell copies of the Software, and to permit persons to whom the 
     Software is furnished to do so, subject to the following conditions:
-    
+
     The above copyright notice and this permission notice shall be included in 
     all copies or substantial portions of the Software.
-    
+
     THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
     IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, 
     FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE 
@@ -33,4 +33,3 @@ License:
 
 The Debian packaging is (C) 2007, Luiz Armesto <luiz.armesto@gmail.com> and
 is licensed under the GPL, see `/usr/share/common-licenses/GPL'.
-
