@@ -43,7 +43,7 @@ Luiz Armesto <luiz.armesto@gmail.com>
 with some contributors that can be found on the project page.
 
 .SH HOMEPAGE
-http://billreminder.sourceforge.net/
+http://code.google.com/p/billreminder/
 
 .SH COPYRIGHT
 Copyright \(co 2006, 2008 Og Maciel
